# RCAbench

./: .dockerignore  .gitignore  AGENTBEATS_SETUP.md  Makefile  README.md  client.py  pyproject.toml  red_agent_card.toml  requirements.txt  setup.py  test.py  test_agentbeats.sh  test_quick.sh  test_simplified.sh  verified_jobs.json  verified_jobs_statistics.txt
.github/instructions/: default.instructions.md
.github/workflows/: build-green-agent.yml  build-purple-agent.yml  publish-purple-agent.yml
agents/mini-swe-agent/: ARCHITECTURE.md  BUILD_AND_TEST.md  CONCURRENCY_MODEL.md  CORRECT_FLOW.md  CURRENT_FLOW.md  DEBUG_TASK.md  DOCKER_FIX.md  Dockerfile  Dockerfile.green  Dockerfile.purple  HOW_TO_SEND_TASK.md  HOW_TO_TEST.md  IMPORTANT_NOTES.md  LOOP_FIX.md  NEXT_STEPS.md  QUICK_START.md  README.md  README_A2A.md  STATE_MANAGEMENT.md  SUMMARIZATION_STRATEGY.md  TESTING.md  __init__.py  a2a_environment.py  docker-compose.yml  docker_environment.py  example_env.sh  green_agent_server.py  path.sh  purple_agent_server.py  run.sh  scenario.toml  send_task.py  (+7 more)
data/: arvo_hf_task_ids.txt
docker/: Dockerfile
docs/: A2A_PROTOCOL_EXPLANATION.md  GREEN_AGENT_PLAN_SUMMARY.md  GREEN_AGENT_REDESIGN_PLAN.md  IMPLEMENTATION_STRUCTURE.md  MINI_SWE_BASH_APPROACH.md  RCABENCH_AGENTS_EXPLANATION.md  TESTING_AGENTS.md
gateway/: Dockerfile  README.md  config.py  main.py
k8s/: README.md  agent-verification-job.yaml  gateway-deployment.yaml  gateway-ingress.yaml  gateway-secret.yaml  gateway-service.yaml  patch-verification-job.yaml  rcabench-deployment.yaml  rcabench-ingress.yaml  rcabench-pipeline-job-build.yml  rcabench-rbac.yaml  rcabench-service.yaml
scripts/: agent_patch_verification.py  analyze_patch.py  analyze_patch_verification_results.py  batch_patch_verification.py  check_cluster_connectivity.sh  check_docker_availability.py  cleanup_patch_jobs.sh  create-secret.sh  create_hf_task_list.py  debug_ground_truth.py  debug_interactive.sh  deploy.sh  docker_validator.py  extract_successful_task_ids.py  fetch_task_ids.py  find_simple_tasks.py  generate_statistics.py  kill_agents.ps1  local_patch_verification.py  local_verify.sh  run_full_pipeline.py  submit_nrp_job.sh  teardown.sh  test_agents.py  test_agents.sh  test_docker_connection.py  test_ground_truth.py  validate.py  validate_tasks.py
tests/: example_reasoning.json  test_arvo_container.py  test_evaluation.py  test_file_path_matching.py  test_ground_truth.py  test_host.py  test_prepare.py  test_reasoning_trace.py
(+42 files in other folders)
