[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcabench"
version = "0.1.0"
description = "A cybersecurity benchmark system for root-cause analysis using LLM agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "RCAbench Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
    "pydantic>=1.10.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "kubernetes>=26.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "docker>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/rcabench"

[tool.setuptools.packages.find]
where = ["src"]
